# pique

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt
.github/: settings.yml
sample_data/: simple.csv
scratch/: column_stats.py
src/pique/: __main__.py  cli.py  engine.py
